[gd_scene load_steps=5 format=3 uid="uid://dffxekp2v1vnb"]

[ext_resource type="Script" uid="uid://b7uch3kbff37i" path="res://assets/scenes/game_scene/start_menu_scene.gd" id="1_ryxpw"]
[ext_resource type="Texture2D" uid="uid://d3ukhgbk67ep2" path="res://addons/spirits/FreeUi/FreeUi/ClassicalButtons/3.png" id="1_thj7i"]
[ext_resource type="Texture2D" uid="uid://c88emwes7dksi" path="res://addons/spirits/FreeUi/FreeUi/ClassicalButtons/4.png" id="2_ryxpw"]

[sub_resource type="LabelSettings" id="LabelSettings_iyc3h"]
font_size = 48

[node name="StartMenuScene" type="Node2D"]
script = ExtResource("1_ryxpw")

[node name="UILayer" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NewGameButton" type="TextureButton" parent="UILayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture_normal = ExtResource("1_thj7i")
texture_pressed = ExtResource("2_ryxpw")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UILayer/VBoxContainer/NewGameButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "New Game"
label_settings = SubResource("LabelSettings_iyc3h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadGameButton" type="TextureButton" parent="UILayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture_normal = ExtResource("1_thj7i")
texture_pressed = ExtResource("2_ryxpw")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UILayer/VBoxContainer/LoadGameButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Load Game"
label_settings = SubResource("LabelSettings_iyc3h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="UILayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture_normal = ExtResource("1_thj7i")
texture_pressed = ExtResource("2_ryxpw")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UILayer/VBoxContainer/SettingsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = SubResource("LabelSettings_iyc3h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitGameButton" type="TextureButton" parent="UILayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture_normal = ExtResource("1_thj7i")
texture_pressed = ExtResource("2_ryxpw")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UILayer/VBoxContainer/ExitGameButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = SubResource("LabelSettings_iyc3h")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UILayer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="UILayer/VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="UILayer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="UILayer/VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
